# effectful

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.haskell-ci  cabal.project  cabal.project.freeze  doctest.sh  effectful.cabal  effective.cabal  genBench.sh  stack.yaml  transformers.md
.github/workflows/: haskell-ci.yml
bench/: Concurrency.hs  Countdown.hs  FileSizes.hs  Main.hs  Unlift.hs  Utils.hs
benchmarks/: README.md
cbits/: utils.c
effectful/: CHANGELOG.md  README.md  effectful.cabal
effectful-core/: CHANGELOG.md  README.md  effectful-core.cabal
effectful-core/bench/: Concurrency.hs  Countdown.hs  FileSizes.hs  Unlift.hs  Utils.hs
effectful-core/src/: Effectful.hs
effectful-core/src/Effectful/: Coroutine.hs  Error.hs  Exception.hs  Fail.hs  Handler.hs  Labeled.hs  Monad.hs  NonDet.hs  Prim.hs  Provider.hs  Reader.hs  Reified.hs
effectful-core/src/Effectful/Dispatch/: Dynamic.hs  Static.hs
effectful-core/src/Effectful/Dispatch/Static/: Primitive.hs  Unsafe.hs
effectful-core/src/Effectful/EarlyReturn/: Dynamic.hs
effectful-core/src/Effectful/Error/: Dynamic.hs  Static.hs
effectful-core/src/Effectful/Input/: Const.hs  Dynamic.hs  Static.hs
effectful-core/src/Effectful/Input/Static/: Action.hs  Value.hs
effectful-core/src/Effectful/Internal/: Effect.hs  Env.hs  Error.hs  MTL.hs  Monad.hs  Unlift.hs  Utils.hs
effectful-core/src/Effectful/Internal/Effect/: Dynamic.hs
effectful-core/src/Effectful/Internal/Utils/: Word64Map.hs
effectful-core/src/Effectful/Labeled/: Error.hs  Input.hs  Output.hs  Provider.hs  Reader.hs  State.hs  VDQ.hs  Writer.hs
effectful-core/src/Effectful/Labeled/Error/: VDQ.hs
effectful-core/src/Effectful/Labeled/Provider/: List.hs
effectful-core/src/Effectful/Labeled/Reader/: VDQ.hs
effectful-core/src/Effectful/Labeled/State/: VDQ.hs
effectful-core/src/Effectful/Labeled/Writer/: VDQ.hs
effectful-core/src/Effectful/Output/: Array.hs  Dynamic.hs
effectful-core/src/Effectful/Output/Static/: Action.hs
effectful-core/src/Effectful/Output/Static/Array/: Local.hs  Shared.hs
effectful-core/src/Effectful/Output/Static/Local/: Array.hs  List.hs
effectful-core/src/Effectful/Output/Static/Shared/: Array.hs  List.hs
effectful-core/src/Effectful/Provider/: List.hs
effectful-core/src/Effectful/Reader/: Dynamic.hs  Static.hs
effectful-core/src/Effectful/State/: Dynamic.hs  Local.hs  Shared.hs
effectful-core/src/Effectful/State/Static/: Local.hs  Shared.hs
effectful-core/src/Effectful/Writer/: Dynamic.hs  Local.hs  Shared.hs
effectful-core/src/Effectful/Writer/Static/: Local.hs  Shared.hs
effectful-core/tests/: ConcurrencyTests.hs  ErrorTests.hs  Main.hs  StateTests.hs  Utils.hs
effectful-core/utils/Effectful/Internal/: Utils.hs
effectful-plugin/: CHANGELOG.md  ChangeLog.md  LICENSE  README.md  Setup.hs  effectful-plugin.cabal  package.yaml
effectful-plugin/src-legacy/Effectful/: Plugin.hs
effectful-plugin/src/Effectful/: Plugin.hs
effectful-plugin/src/Effectful/Plugin/: Fundep.hs  Internal.hs
effectful-plugin/src/Effectful/Plugin/Fundep/: Stuff.hs  Unification.hs  Utils.hs
effectful-plugin/test/: AmbiguousSpec.hs  ExampleSpec.hs  LegitimateTypeErrorSpec.hs  MultipleVarsSpec.hs  PluginSpec.hs  TypeErrors.hs  VDQSpec.hs
effectful-plugin/tests/: PluginTests.hs
effectful-th/: CHANGELOG.md  LICENSE  effectful-th.cabal
effectful-th/examples/: MyReader.hs
effectful-th/src/Effectful/: TH.hs
effectful-th/tests/: Error.hs  Fail.hs  Reader.hs  State.hs  ThTests.hs  Writer.hs
effectful/bench/: Concurrency.hs  Countdown.hs  FileSizes.hs  Main.hs  Unlift.hs  Utils.hs
effectful/examples/: FileSystem.hs
effectful/src/: Effectful.hs
effectful/src/Effectful/: Async.hs  Concurrent.hs  Environment.hs  Error.hs  FileSystem.hs  Handler.hs  Process.hs  Resource.hs  ST.hs  STE.hs  Temporary.hs  Timeout.hs
effectful/src/Effectful/ByteString/: Static.hs
effectful/src/Effectful/ByteString/Builder/: Static.hs
effectful/src/Effectful/ByteString/Lazy/: Static.hs
effectful/src/Effectful/Concurrent/: Async.hs  Base.hs  Chan.hs  Effect.hs  Internal.hs  MVar.hs  QSem.hs  QSemN.hs  STM.hs
effectful/src/Effectful/Concurrent/Chan/: Strict.hs
effectful/src/Effectful/Concurrent/MVar/: Strict.hs
effectful/src/Effectful/Concurrent/MVar/Strict/: Compat.hs
effectful/src/Effectful/Console/: ByteString.hs  Effect.hs  Static.hs
effectful/src/Effectful/Console/ByteString/: Lazy.hs  Static.hs
effectful/src/Effectful/Console/ByteString/Lazy/: Static.hs
effectful/src/Effectful/FileSystem/: Effect.hs  IO.hs  OsPath.hs
effectful/src/Effectful/FileSystem/File/: OsPath.hs
effectful/src/Effectful/FileSystem/IO/: ByteString.hs  File.hs
effectful/src/Effectful/FileSystem/IO/ByteString/: Builder.hs  Lazy.hs  Static.hs
effectful/src/Effectful/FileSystem/IO/ByteString/Builder/: Static.hs
effectful/src/Effectful/FileSystem/IO/ByteString/Lazy/: Static.hs
effectful/src/Effectful/Prim/: IORef.hs
effectful/src/Effectful/Prim/IORef/: Strict.hs
effectful/src/Effectful/ST/: STRef.hs
effectful/tests/: AlternativeTests.hs  AsyncTests.hs  ConcurrencyTests.hs  EarlyReturnTests.hs  EnvTests.hs  EnvironmentTests.hs  ErrorTests.hs  FileSystemTests.hs  InputTests.hs  LabeledTests.hs  Main.hs  NonDetTests.hs  OutputTests.hs  PrimTests.hs  ReaderTests.hs  ResourceTests.hs  STTests.hs  StateTests.hs  SteTests.hs  TimeoutTests.hs  UnliftTests.hs  Utils.hs  Word64MapTests.hs
effectful/utils/Effectful/Internal/: Utils.hs
examples/: FileSystem.hs
src/: Effectful.hs  Effective.hs
src/Effectful/: Async.hs  Coroutine.hs  Error.hs  Handler.hs  Interpreter.hs  Monad.hs  Reader.hs  Resource.hs  STM.hs  State.hs  Writer.hs
src/Effectful/Class/: Reader.hs  State.hs  Writer.hs
src/Effectful/Error/: Dynamic.hs
src/Effectful/Internal/: Effect.hs  Env.hs  Has.hs  Monad.hs  Unlift.hs  (+1 more)
src/Effective/: Coroutine.hs  Error.hs  Reader.hs  Resource.hs  State.hs  Writer.hs
tests/: AsyncTests.hs  ConcurrencyTests.hs  ErrorTests.hs  Main.hs  StateTests.hs  Utils.hs
tests/doctest/: Main.hs
tests/tasty/: Main.hs
(+17 files in other folders)
