cabal-version:      2.4
build-type:         Simple
name:               effectful
version:            0.0.0.0
license:            BSD-3-Clause
license-file:       LICENSE
category:           Control
maintainer:         andrzej@rybczak.net
author:             Andrzej Rybczak
synopsis:           An easy to use, performant extensible effects library.

description: An easy to use, performant extensible effects library with seamless
             integration with the existing Haskell ecosystem.

extra-source-files: CHANGELOG.md
                    README.md

tested-with: GHC ==8.8.4 || ==8.10.4 || ==9.0.1 || ==9.2.0.20210422

bug-reports:   https://github.com/arybczak/effectful/issues
source-repository head
  type:     git
  location: https://github.com/arybczak/effectful.git

flag benchmark-foreign-libraries
    description: Include other effect libraries in the benchmarks
    default: False

common language
    ghc-options:        -Wall -Wcompat

    default-language:   Haskell2010

    default-extensions: BangPatterns
                        ConstraintKinds
                        DataKinds
                        FlexibleContexts
                        FlexibleInstances
                        GADTs
                        GeneralizedNewtypeDeriving
                        LambdaCase
                        MultiParamTypeClasses
                        NoStarIsType
                        RankNTypes
                        RecordWildCards
                        RoleAnnotations
                        ScopedTypeVariables
                        StrictData
                        TupleSections
                        TypeApplications
                        TypeFamilies
                        TypeOperators

library
    import:         language

    ghc-options:    -O2

    build-depends:    base >= 4.13 && <5
                    , async
                    , containers
                    , exceptions
                    , ghc-prim
                    , monad-control
                    , primitive
                    , resourcet
                    , stm
                    , transformers
                    , transformers-base
                    , unliftio-core

    hs-source-dirs:  src

    exposed-modules: Effectful
                     Effectful.Async
                     Effectful.Class.Reader
                     Effectful.Class.State
                     Effectful.Class.Writer
                     Effectful.Error
                     Effectful.Fail
                     Effectful.Internal.Effect
                     Effectful.Internal.Env
                     Effectful.Internal.Monad
                     Effectful.Interpreter
                     Effectful.Monad
                     Effectful.Reader
                     Effectful.Resource
                     Effectful.State
                     Effectful.State.Dynamic
                     Effectful.State.MVar
                     Effectful.STM
                     Effectful.Writer
                     Effectful.Writer.Dynamic
                     Effectful.Writer.MVar

test-suite test
    import:         language

    ghc-options:    -threaded -rtsopts -with-rtsopts=-N4

    build-depends:    base <5
                    , containers
                    , effectful
                    , exceptions
                    , lifted-base
                    , tasty
                    , tasty-hunit
                    , unliftio

    hs-source-dirs: tests

    type:           exitcode-stdio-1.0
    main-is:        Main.hs

    other-modules:  AsyncTests
                    ErrorTests
                    StateTests
                    Utils

benchmark bench
    import:         language

    ghc-options:    -threaded -rtsopts -with-rtsopts=-T

    if flag(benchmark-foreign-libraries)
       build-depends: mtl

       if impl(ghc < 9)
          build-depends: freer-simple

       if impl(ghc < 9.2)
          build-depends: fused-effects

       if impl(ghc < 9)
          build-depends: polysemy

    build-depends:    base <5
                    , effectful
                    , tasty-bench
                    , transformers
                    , unix

    hs-source-dirs: bench

    type:           exitcode-stdio-1.0
    main-is:        Main.hs

    other-modules:  Countdown
                    FileSizes
